--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Logan Brown",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.5.3",
+    "mongoose": "^5.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2" 
+    "nodemon": "^2.0.2"
   }
 }
